--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
     <div id="main">
         <div id="book-info" class="hidden-when-test">
-            <span id="book-title">Moby Dick</span>
-            <span id="book-author">Herman Melville</span>
-            <span id="book-chapter">CHAPTER LXXI. THE JEROBOAM'S STORY</span>
+            <span id="book-title">...</span>
+            <span id="book-author">...</span>
+            <span id="book-chapter">Book from Project Gutenberg &#60;3</span>
         </div>
         <div id="center-div">
-            <span id="start-test-hint" class="hidden-when-test">hold [space] to read</span>
+            <span id="status-indicator" class="hidden-when-test">(loading book...)</span>
             <span id="current-word" typing="false">
-                Aye?
+                ...
             </span>
             <div id="wpm-monitor">
                 <span id="button-less-wpm" class="hidden-when-test button">less</span>
@@ -29,10 +29,19 @@
             </div>
         </div>
         <div id="footer" class="hidden-when-test">
-            <span class="button">new literature</span>
-            <span class="button">change language</span>
-            <span class="button">change theme</span>
-            <span class="button">my portfolio</span>
+            <span id="button-new-book" class="button">new book</span>
+            <span id="button-change-language" class="button">change language</span>
+            <span id="button-change-theme" class="button">change theme</span>
+            <span id="button-portfolio" class="button">my portfolio</span>
+        </div>
+    </div>
+
+    <div id="menu">
+        <div id="menu-options">
+            <!-- Generate menu options here -->
+        </div>
+        <div id="menu-close-button">
+            <span>close</span>
         </div>
     </div>
 </body>
