--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Speedreading</title>
 
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script defer src="/main.js"></script>
+    <script defer src="main.js"></script>
 </head>
 <body>
     <div id="main">
