Link to github instead of portfolio

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <span id="button-new-book" class="button">new book</span>
             <span id="button-change-language" class="button">change language</span>
             <span id="button-change-theme" class="button">change theme</span>
-            <span id="button-portfolio" class="button">my portfolio</span>
+            <span id="button-portfolio" class="button">github repo</span>
         </div>
     </div>
 
